<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/main"
    tools:context=".LoginActivity">
    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:textColorHint="@color/pink"
            android:minHeight="48dp"
            android:background="@drawable/textborder"
            android:inputType="phone"
            android:singleLine="true"
            android:autofillHints="6367007879" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/otp_number"
            android:hint="@string/otp_number"
            android:visibility="gone"
            android:layout_marginTop="16dp"
            android:inputType="number"
            android:autofillHints="123456" />
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@drawable/border"
            android:text="@string/login_button"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/verify_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@drawable/border"
            android:text="@string/verify_button"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/resend_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@drawable/border"
            android:text="@string/resend_button"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:visibility="gone"
            />

    </LinearLayout>

</LinearLayout>