<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="4dp"
    app:cardCornerRadius="20dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:elevation="4dp"
            app:cardBackgroundColor="#F3D374"
            app:cardCornerRadius="8dp">


            <TextView
                android:id="@+id/row_poll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/rpoll"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:elevation="4dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/row_image1"
                android:layout_width="47dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_baseline_assignment_ind_24" />

            <TextView
                android:id="@+id/row_op1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/rop1"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:elevation="4dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/row_image2"
                android:layout_width="47dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_baseline_assignment_ind_24" />

            <TextView
                android:id="@+id/row_op2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/rop2"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:elevation="4dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/row_image3"
                android:layout_width="47dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_baseline_assignment_ind_24" />

            <TextView
                android:id="@+id/row_op3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/rop3"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/row_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/time"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>

