<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    style="@style/Animation.Design.BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    app:behavior_hideable="false"
    app:behavior_peekHeight="50dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/poll"
                        android:textColor="@color/red"
                        android:textSize="20sp"
                         />

                    <EditText
                        android:id="@+id/poll_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:inputType="textPersonName"
                        android:hint="@string/who_will_win_state_elections"
                        android:textColor="@color/red"
                        android:textColorHint="@color/red"
                        android:textSize="16sp"
                        android:autofillHints="" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/option1_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/button"
                        android:src="@drawable/baseline_add_white_24"
                        android:contentDescription="@string/ap" />

                    <EditText
                        android:id="@+id/option1_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:hint="@string/write_option_1"
                        android:inputType="textPersonName"
                        android:textColor="@color/red"
                        android:textColorHint="@color/red"
                        android:textSize="14sp"
                        android:autofillHints="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/option2_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/button"
                        android:src="@drawable/baseline_add_white_24"
                        android:contentDescription="@string/ap" />

                    <EditText
                        android:id="@+id/option2_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:hint="@string/write_option_2"
                        android:inputType="textPersonName"
                        android:textColorHint="@color/red"
                        android:textColor="@color/red"
                        android:textSize="14sp"
                        android:autofillHints="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/option3_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/button"
                        android:src="@drawable/baseline_add_white_24"
                        android:contentDescription="@string/ap" />

                    <EditText
                        android:id="@+id/option3_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:hint="@string/write_option_3"
                        android:inputType="textPersonName"
                        android:textColorHint="@color/red"
                        android:textColor="@color/red"
                        android:textSize="14sp"
                        android:autofillHints="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/publish_poll"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:text="@string/publish"
                        android:background="@drawable/border"
                        android:textAlignment="center"
                        android:textColor="@color/green"
                        android:textSize="16sp" />
                </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>